fix(css markdown): *[id] is covered by header (#45)
* :bug: *[id] is covered by header

* fix(css markdown): custom var

--- a/source/css/style/_base/markdown.styl
+++ b/source/css/style/_base/markdown.styl
@@ -48,6 +48,11 @@ s
     box-sizing border-box
     font-smoothing antialiased
     osx-font-smoothing grayscale
+    
+    if (hexo-config('navbar.sticky'))
+        @media screen and (min-width: 1080px)
+            &[id]
+                scroll-margin-top $header_height
 
 a
     color var(--main-color)
